index page delete

--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -2,6 +2,8 @@ extends ../layouts/default
 
 block content
 	.container: .jumbotron
+		h1 Hallo Ralph
+	//- .container: .jumbotron
 		img(src='/images/logo.svg', width='160')
 		h1 Welcome
 		p This is your new <a href='http://keystonejs.com' target='_blank'>KeystoneJS</a> website.
